--- a/space.html
+++ b/space.html
@@ -19,93 +19,127 @@
                 </div>
                 <div class="col-6">
                     <nav>
-                        <ul class="row">
+                        <ul>
                             <li><a href="#">Компания</a></li>
-                            <li><a></a></li>
                             <li><a href="#">Каталог</a></li>
-                            <li><a></a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-1 hader-icon">
-                        <a href="#"><img class="mail" src="/hohlova/images/mail-icon.png" alt="mail" title="Электронная почта"></a>
-                        <a href="#"><img class="phone" src="/hohlova/images/phone-icon.png" alt="phone" title="Телефон"></a>
+                    <a href="#"><img src="/hohlova/images/mail-icon.png" alt="mail" title="Электронная почта"></a>
+                    <a href="#"><img src="/hohlova/images/phone-icon.png" alt="phone" title="Телефон"></a>
                 </div>
             </div>
+        </header>
             <section class="moon">
                 <div class="container">
-                    <div class="col-2">
-                        <h1>
-                            <strong>
-                                На луну и обратно
-                            </strong>
-                        </h1>
-                        <pre>
-                            Космически крутой туризм.
-                            Пакетные и индивидуальные туры по
-                            лучшим планетам галактики.
-                        </pre>
-                        <a href="#" class="button">ПОДБОР ТУРА <img class="arrow" scr="hohlova/images/right-arrow-dark.png"></a>
+                    <div class="col-1">
+                        <h1><strong>На луну и обратно</strong></h1>
+                        <p>Космически крутой туризм.
+                        <br>
+                        Пакетные и индивидуальные туры по лучшим планетам галактики.</p>
+                        <a href="#" class="btn btn-yellow">подбор тура</a>
                     </div>
-                    <div class="col-2">
-                        <a href="#">
-                            <img class="rocket" src="/hohlova/images/moon-rocket.png">
-                        </a>
+                    <div class="col-1 moon-rocket">
+                        <a href="#"><img src="/hohlova/images/moon-rocket.png"></a>
                     </div>
                 </div>
             </section>
-        </header>
             <section class="advantages">
                 <div class="container">
-                    <div class="col-1">
-                        <a href="#">
-                            <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
-                            <pre>
-                                Комфортабельные ракеты отечественного производства.
-                            </pre>
-                        </a>
+                    <div class="block">
+                        <div class="col-1 block-item">
+                            <img scr="/hohlova/images/advantage-icon-1.png">
+                            <p>Комфортабельные ракеты отечественного производства.</p>
+                        </div>
+                        <div class="col-1 block-item">
+                                <img scr="/hohlova/images/advantage-icon-2.png">
+                                <p>Вкусное и полезное космическое питание на борту.</p>
+                        </div>
                     </div>
-                    <div class="col-1">
-                        <a href="#">
-                            <img class="advantage" scr="/hohlova/images/advantage-icon-2.png">
-                            <pre>
-                                Вкусное и полезное космическое питание на борту.
-                            </pre>
-                        </a>
-                    </div>
-                    <div class="col-1">
-                        <a href="#">
-                            <img class="advantage" scr="/hohlova/images/advantage-icon-3.png">
-                            <pre>
-                                Весь состав пилотов состоит из бывших космонавтов.
-                            </pre>
-                        </a>
-                    </div>
-                    <div class="col-1">
-                        <a href="#">
-                            <img class="advantage" scr="/hohlova/images/advantage-icon-4.png">
-                            <pre>
-                                Экскурсии на луноходе на Море Ясности и Океан Бурь.
-                            </pre>
-                        </a>
+                    <div class="block">
+                        <div class="col-1 block-item">
+                                <img scr="/hohlova/images/advantage-icon-3.png">
+                                <p>Весь состав пилотов состоит из бывших космонавтов.</p>
+                        </div>
+                        <div class="col-1 block-item">
+                            <img scr="/hohlova/images/advantage-icon-4.png">
+                            <p>Экскурсии на луноходе на Море Ясности и Океан Бурь.</p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="content">
-                <div class="container">
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
+                <div class="container column">
+                    <div class="block">
+                        <div class="col-1 left-column">
+                            <img src="/hohlova/images/map.jpg" alt="map" title="Map">
+                        </div>
+                        <div class="col-1 right-column">
+                            <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
+                            <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска уже не радуют ваших близких? В следуйщий раз привезите им настоящий лунный камень!</p>
+                            <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну, сейчас решвем вопросы с визовым центром Венеры).</p>
+                            <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
+                        </div>
+                    </div>
+                    <div class="block">
+                        <div class="col-1 left-column">
+                            <h2>Не забудьте взять с собой:</h2>
+                            <ul>
+                                <li><strong>Паспорт.</strong> Визовый режим пока не введе, но на границе бедет досмотр.</li>
+                                <li><strong>Тяжелые ботинки.</strong> Пригодятся вам в условиях низкой гравитации на Луне.</li>
+                                <li><strong>Криптовалюта.</strong> Рекомендуем заранее обмеять немного Лун-коинов, чтобы купить сувениры.</li>
+                            </ul>
+                        </div>
+                        <div class="col-1 right-column">
+                            <h2>Это лучше оставить дома:</h2>
+                            <ul>
+                                <li><strong>Телефон.</strong> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
+                                <li><strong>Бутерброды.</strong> На борту будет питани, которое не разлетится по кабине в условиях невесомости.</li>
+                                <li><strong>Плавки/купальник.</strong> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
         <footer>
             <div class="container">
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
+                <div class="block">
+                    <div class="col-1">
+                        <a href="#"><img scr="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
+                        <span>Space Z</span>
+                        <p class="copyright">000 "Космос Зэ".
+                        <br>
+                        Все права защищены.</p>
+                    </div>
+                    <div class="col-1">
+                        <h3><a href="#">Компания</a></h3>
+                        <ul>
+                            <li><a href="#">История</a></li>
+                            <li><a href="#">Миссия</a></li>
+                            <li><a href="#">Команда</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="col-1">
+                        <h3><a href="#">Каталог</a></h3>
+                        <ul>
+                            <li><a href="#">Полеты</a></li>
+                            <li><a href="#">Проживание</a></li>
+                            <li><a href="#">Экскурсия</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-1">
+                        <h3><a href="#">Контакты</a></h3>
+                        <ul>
+                            <li><a href="#">Отправить заявку</a></li>
+                            <li><a href="#">Схема проезда</a></li>
+                            <li><a href="#">Время работы</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
