--- a/space.html
+++ b/space.html
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="block">
                     <div class="col-1">
-                        <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a>
+                        <a href="#"><img class="footer-logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a>
                         <span>Space Z</span>
                         <p class="copyright">000 "Космос Зэ".
                         <br>
