--- a/space.html
+++ b/space.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="SpaceZ">
         <meta name="keywords" content="полет на луну, луна на полет, полёт на луну, луна на полёт, луна взлёт, луна взлет">
-        <meta name="viewport" content="initial-scale=1">
+        <meta name="viewport" content="with=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/space.css">
 <!--        <link rel="stylesheet" href="/hohlova/style/outline.css">-->
     </head>
