--- a/space.html
+++ b/space.html
@@ -32,77 +32,99 @@
                 </div>
             </div>
         </header>
-            <section class="moon">
-                <div class="container">
-                    <div class="col-1 man">
-                        <h1><strong>На луну и обратно</strong></h1>
-                        <p>Космически крутой туризм.
-                        <br>
-                        Пакетные и индивидуальные туры по лучшим планетам галактики.</p>
-                        <a href="#" class="btn btn-yellow">Подбор тура</a>
+        <section class="moon">
+            <div class="container">
+                <div class="col-1 man">
+                    <h1><strong>На луну и обратно</strong></h1>
+                    <p>Космически крутой туризм.
+                    <br>
+                        Пакетные и индивидуальные туры по лучшим планетам галактики</p>
+                    <a href="#" class="btn btn-yellow">Подбор тура</a>
+                </div>
+                <div class="col-1 moon-rocket">
+                    <a href="#"><img src="/hohlova/images/moon-rocket.png"></a>
+                </div>
+            </div>
+        </section>
+        <section class="flying">
+            <table>
+                <tr>
+                    <td>№ Рейса</td>
+                    <td>Откуда — куда</td>
+                    <td>Время вылета</td>
+                    <td>Время прилета</td>
+                </tr>
+                <tr>
+                    <td>1635</td>
+                    <td>VKO — MOON</td>
+                    <td>00:45</td>
+                    <td>23:15</td>
+                </tr>
+                <tr>
+                    <td>70200</td>
+                    <td>LED — MOON</td>
+                    <td>17:30</td>
+                    <td>16:20</td>
+                </tr>
+            </table>
+        </section>
+        <section class="advantages">
+            <div class="container">
+                <div class="block">
+                    <div class="col-1 block-item">
+                        <img src="/hohlova/images/advantage-icon-1.png">
+                        <p>Комфортабельные ракеты отечественного производства.</p>
                     </div>
-                    <div class="col-1 moon-rocket">
-                        <a href="#"><img src="/hohlova/images/moon-rocket.png"></a>
+                    <div class="col-1 block-item">
+                        <img src="/hohlova/images/advantage-icon-2.png">
+                        <p>Вкусное и полезное космическое питание на борту.</p>
                     </div>
                 </div>
-            </section>
-            <section class="advantages">
-                <div class="container">
-                    <div class="block">
-                        <div class="col-1 block-item">
-                            <img src="/hohlova/images/advantage-icon-1.png">
-                            <p>Комфортабельные ракеты отечественного производства.</p>
-                        </div>
-                        <div class="col-1 block-item">
-                            <img src="/hohlova/images/advantage-icon-2.png">
-                            <p>Вкусное и полезное космическое питание на борту.</p>
-                        </div>
+                <div class="block">
+                    <div class="col-1 block-item">
+                        <img src="/hohlova/images/advantage-icon-3.png">
+                        <p>Весь состав пилотов состоит из бывших космонавтов.</p>
                     </div>
-                    <div class="block">
-                        <div class="col-1 block-item">
-                            <img src="/hohlova/images/advantage-icon-3.png">
-                            <p>Весь состав пилотов состоит из бывших космонавтов.</p>
-                        </div>
-                        <div class="col-1 block-item">
-                            <img src="/hohlova/images/advantage-icon-4.png">
-                            <p>Экскурсии на луноходе на Море Ясности и Океан Бурь.</p>
-                        </div>
+                    <div class="col-1 block-item">
+                        <img src="/hohlova/images/advantage-icon-4.png">
+                        <p>Экскурсии на луноходе на Море Ясности и Океан Бурь.</p>
                     </div>
                 </div>
-            </section>
-            <section class="content">
-                <div class="container column">
-                    <div class="block">
-                        <div class="col-1 left-column">
-                            <img src="/hohlova/images/map.jpg" alt="map" title="Map">
-                        </div>
-                        <div class="col-1 right-column">
-                            <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
-                            <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска уже не радуют ваших близких? В следуйщий раз привезите им настоящий лунный камень!</p>
-                            <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну, сейчас решвем вопросы с визовым центром Венеры).</p>
-                            <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
-                        </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="container column">
+                <div class="block">
+                    <div class="col-1 left-column">
+                        <img src="/hohlova/images/map.jpg" alt="map" title="Map">
                     </div>
-                    <div class="block">
-                        <div class="col-1 left-column">
-                            <h2>Не забудьте взять с собой:</h2>
-                            <ul>
-                                <li><strong>Паспорт.</strong> Визовый режим пока не введе, но на границе бедет досмотр.</li>
-                                <li><strong>Тяжелые ботинки.</strong> Пригодятся вам в условиях низкой гравитации на Луне.</li>
-                                <li><strong>Криптовалюта.</strong> Рекомендуем заранее обмеять немного Лун-коинов, чтобы купить сувениры.</li>
-                            </ul>
-                        </div>
-                        <div class="col-1 right-column">
-                            <h2>Это лучше оставить дома:</h2>
-                            <ul>
-                                <li><strong>Телефон.</strong> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
-                                <li><strong>Бутерброды.</strong> На борту будет питани, которое не разлетится по кабине в условиях невесомости.</li>
-                                <li><strong>Плавки/купальник.</strong> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
-                            </ul>
-                        </div>
+                    <div class="col-1 right-column">
+                        <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
+                        <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска уже не радуют ваших близких? В следуйщий раз привезите им настоящий лунный камень!</p>
+                        <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну, сейчас решвем вопросы с визовым центром Венеры).</p>
+                        <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
                     </div>
                 </div>
-            </section>
+                <div class="block">
+                    <div class="col-1 left-column">
+                        <h2>Не забудьте взять с собой:</h2>
+                        <ul>
+                            <li><strong>Паспорт.</strong> Визовый режим пока не введе, но на границе бедет досмотр.</li>
+                            <li><strong>Тяжелые ботинки.</strong> Пригодятся вам в условиях низкой гравитации на Луне.</li>
+                            <li><strong>Криптовалюта.</strong> Рекомендуем заранее обмеять немного Лун-коинов, чтобы купить сувениры.</li>
+                        </ul>
+                    </div>
+                    <div class="col-1 right-column">
+                        <h2>Это лучше оставить дома:</h2>
+                        <ul>
+                            <li><strong>Телефон.</strong> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
+                            <li><strong>Бутерброды.</strong> На борту будет питани, которое не разлетится по кабине в условиях невесомости.</li>
+                            <li><strong>Плавки/купальник.</strong> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer>
             <div class="container">
                 <div class="block">
