--- a/space.html
+++ b/space.html
@@ -49,10 +49,10 @@
         <section class="flying">
             <table>
                 <tr>
-                    <td>№ Рейса</td>
-                    <td>Откуда — куда</td>
-                    <td>Время вылета</td>
-                    <td>Время прилета</td>
+                    <th>№ Рейса</th>
+                    <th>Откуда — куда</th>
+                    <th>Время вылета</th>
+                    <th>Время прилета</th>
                 </tr>
                 <tr>
                     <td>1635</td>
